--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,5 +1,7 @@
-<!-- <title>AboutPage</title>  -->
-<!-- <link href="/about.css" rel="stylesheet"> -->
-<h2>
-About page here
-</h2>
+<title>About Page</title>
+  <h2>
+    About page here
+  </h2>
+  <h2>
+    FAQ
+  </h2>
