--- a/scss/file.scss
+++ b/scss/file.scss
@@ -1,13 +1,15 @@
 /*
- * Globals
- */
+* Globals
+*/
 @import "header.scss";
 @import "footer.scss";
+@import "cover.scss";
 /* Links */
 a,
 a:focus,
 a:hover {
   color: purple;
+
 }
 
 /* Custom default button */
@@ -15,14 +17,14 @@ a:hover {
 .btn-default:hover,
 .btn-default:focus {
   color: #444;
-  text-shadow: none; /* Prevent inheritance from `body` */
+  text-shadow: none;
   background-color: #fff;
   border: 1px solid #fff;
 }
 
 /*
- * Base structure
- */
+* Base structure
+*/
 html, body {
   height: 100%;
   background-color: #333;
@@ -33,125 +35,119 @@ body {
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 
-/* Extra markup and styles for table-esque vertical and horizontal centering */
-.site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-}
-.site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
-}
-.cover-container {
-  margin-right: auto;
-  margin-left: auto;
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset,
+form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 
-/* Padding for spacing */
-.inner {
-  padding: 30px;
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block;
 }
+/*
+* Contact page
+*/
 
 
 /*
- * Header
- */
-.masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
+* Header
+*/
+.header-section {
+  background-color: white;
+
 }
 
-.masthead-nav > li {
-  display: inline-block;
-}
-.masthead-nav > li + li {
-  margin-left: 20px;
-}
-.masthead-nav > li > a {
-  padding-right: 0;
-  padding-left: 0;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
-}
-.masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
-  background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
-}
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
-  color: #fff;
-  border-bottom-color: #fff;
-}
-
-@media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
-  }
-  .masthead-nav {
-    float: right;
+.field-section {
+  height: 40px;
+  width: 200px;
+  input {
+    width: 100%;
   }
 }
 
-
-/*
- * Cover
- */
-
-.cover {
-  padding: 0 20px;
-  .btn-lg {
-    padding: 10px 20px;
-    font-weight: bold;
-  }
-}
-
-/*
- * Footer
- */
 
 
 
 
 /*
- * Affix and center
- */
-
-@media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: absolute;
-    top: 0;
-  }
-
-  /* Start the vertical centering */
-  .site-wrapper-inner {
-    vertical-align: middle;
-  }
-  /* Handle the widths */
-  .masthead,
-  .cover-container {
-    width: 100%; /* Must be percentage or pixels for horizontal alignment */
-  }
+* Cover
+*/
+.main-content {
+  height: 800px;
 }
 
-@media (min-width: 992px) {
-  .masthead,
-  .cover-container {
-    width: 700px;
-  }
-}
 
-.index-section-one {
+/*
+* Footer
+*/
+.footer-section-one {
+  //border: 5px solid purple;
+  background-color: #39454b;
   height: 300px;
   width: 100%;
+  img {
+    height: 128px;
+    width: 128px;
+  }
 }
+
+.footer-section-two {
+  background-color: #344047;
+  height: 40px;
+  width: 100%;
+  p {
+    padding-top: 10px;
+  }
+}
+
+.item-footer-left {
+  grid-area: left;
+}
+.item-footer-middle {
+  grid-area: middle;
+}
+.item-footer-right {
+  grid-area: right;
+}
+
+.grid-container-footer {
+  display: grid;
+  height: 100%;
+  grid-gap: 20px;
+  padding: 20px;
+  grid-template-areas:
+  'left middle right'
+  'left middle right'
+  'left middle right';
+  div {
+    //border: solid yellow 2px;
+    text-align: left;
+    padding-left: 20px;
+
+  }
+  .item-footer-inner {
+    //border: solid blue 1px;
+    padding-left: 0px;
+    margin-right: 20px;
+    p {
+      padding-top: 15px;
+    }
+    span {
+      padding-top: 2em;
+    }
+  }
+}
+
+
+
+
+
+
+
+/*
+* Affix and center
+*/
