--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -9,3 +9,8 @@
 <link href="css/bulma.css" rel="stylesheet">
 <!-- file.css -->
 <link href="css/file.css" rel="stylesheet">
+<!-- jquery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="/index-jquery.js"></script>
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
