imp add-faq view and print faqs in myDB, TODO store queries into faqs table

--- a/views/partials/login.hbs
+++ b/views/partials/login.hbs
@@ -1,4 +1,4 @@
-<form method="GET" action="http://localhost:8080">
+<form method="POST" action="http://localhost:8080">
   <a class="navbar-link navbar-item" href="/">
     Login here
   </a>
@@ -33,4 +33,3 @@
     </a>
   </div>
 </form>
-<!-- TODO logut form-->
