imp add-faq middleware successfully

--- a/views/faqs.hbs
+++ b/views/faqs.hbs
@@ -3,8 +3,9 @@
 <ul>
 	{{#each faqs}}
 		<li>
+      <div>{{username}}</div>
 			<div>{{question}}</div>
-			<div>{{answer}}<br><br></div>
+			<div>{{answer}}</div>
 		</li>
 	{{/each}}
 </ul>
