--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,13 +1,11 @@
 <title>
   About Page
 </title>
-  <h2>
-    About page here
-  </h2>
-  <h2>
-    FAQ
-  </h2>
-  <form>
-    
+<h2>
+  About page here
+</h2>
+{{>faqs}}
+<form>
 
-  </form>
+
+</form>
