--- a/views/partials/login.hbs
+++ b/views/partials/login.hbs
@@ -1,6 +1,6 @@
 <form method="POST" action="/login">
   <a class="navbar-link navbar-item" href="/">
-    Login here
+    Admin
   </a>
   <div class="navbar-dropdown">
     <a class="navbar-item">
