imp Upload File component

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
         <h1 class="title">
           Freddans Blogg
         </h1>
-        <h2 class="subtitle">
+        <h2 class="subtitle" >
           Follow Freddans terrific and exciting adventures
         </h2>
       </div>
@@ -14,12 +14,12 @@
 </div>
 <div class="blogpost-section">
 
-  <!-- form for GET image from img folder -->
+  <!-- TODO form for DELETE image from img folder -->
   <form>
     <article class="media">
       <div class="media-content">
         <div class="content">
-          {{>images-list}}
+          {{> imageslist}}
         </div>
       </div>
       <div class="media-right">
@@ -27,6 +27,7 @@
       </div>
     </article>
   </form>
+
 
   <!--form for INSERTing Image into img folder  -->
   <!--if ..isLoggedIn, access available  -->
