blogposts became gallery instead

--- a/public_html/css/file.css
+++ b/public_html/css/file.css
@@ -58,8 +58,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 .hero-section {
   background-color: #121212; }
 
-.blogpost-section {
-  height: 1200px; }
+.gallery-section {
+  height: 1500px; }
 
 /*
 * Header
