--- a/scss/file.scss
+++ b/scss/file.scss
@@ -61,9 +61,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   background-color: $black-bis;
 }
 
-.blogpost-section {
-  height: 1200px;
+.gallery-section {
+  height: 1500px;
 }
+
+
 
 
 /*
