--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -20,6 +20,9 @@
     <a class="navbar-item" href="/contact">
       Contact
     </a>
+    <a class="navbar-item" href="/gallery">
+      Gallery
+    </a>
     <div class="navbar navbar-item has-dropdown is-hoverable" aria-label="dropdown navigation" role="navigation">
       {{>login}}
     </div>
