--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,6 +24,7 @@
     </div>
   </article>
 
+{{#if isLoggedIn}}
   <form action="/" method="POST">
     <article class="media">
       <div class="media-content">
@@ -43,4 +44,6 @@
       </div>
     </article>
   </form>
+{{/if}}
+
 </div>
