--- a/views/updatepost.hbs
+++ b/views/updatepost.hbs
@@ -1,7 +1,8 @@
-<h1>Update Post tjajajajjaja</h1>
+<h1>Update Post</h1>
 
 <p>The id of the post: {{blogpost.id}}</p>
 
+{{#if blogposttest}}
 <form action="/updatepost/{{blogpost.id}}" method="POST">
   <div>
     titlepost: <input type="text" name="titlepost" value="{{blogpost.title}}" >
@@ -11,3 +12,4 @@
   </div>
   <input type="submit" value="Save Changes" >
 </form>
+{{/if}}
