--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -4,7 +4,7 @@
       <img src="img/letter-f.png" >
     </figure>
   </a>
-  <div class="navbar-burger burger" data-target="navbarExampleTransparentExample" onclick="toggleBurger" >
+  <div class="navbar-burger burger is-active" data-target="navbarExampleTransparentExample" onclick="toggleBurger" >
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" >
       <span></span>
       <span></span>
@@ -12,8 +12,11 @@
     </a>
   </div>
 </div>
-<div id="navbarExampleTransparentExample" class="navbar-menu">
+<div id="navbarExampleTransparentExample" class="navbar-menu is-active">
   <div class="navbar-start">
+    <a class="navbar-item" href="/">
+      Home
+    </a>
     <a class="navbar-item" href="/about">
       About
     </a>
