--- a/views/partials/blogposts.hbs
+++ b/views/partials/blogposts.hbs
@@ -1,15 +1,24 @@
 <ul>
   {{#each postTable}}
-  <li>
-    <div>
-      <h2>
-        {{title}}
-      </h2>
-      <br>
-      <p>
-        {{comment}}
-      </p>
-    </div>
-  </li>
+  <form action="/blogpost" method="GET">
+    <li>
+      <div>
+        <h2>
+          {{title}}
+        </h2>
+        <br>
+        <p>
+          {{comment}}
+        </p>
+        <div class="media-right">
+          <a class="delete" href="/blogpost/deletepost/{{id}}" ></a>
+        </div>
+        <div class="media-right">
+          <a class="button" href="/blogpost/updatepost/{{id}}" >Update</a>
+        </div>
+      </div>
+    </li>
+  </form>
+
   {{/each}}
 </ul>
