--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -6,9 +6,9 @@
 <meta name="author" content="">
 <link rel="icon" href="../../favicon.ico">
 <!-- Bulma -->
-<link href="css/bulma.css" rel="stylesheet">
+<link href="/css/bulma.css" rel="stylesheet">
 <!-- file.css -->
-<link href="css/file.css" rel="stylesheet">
+<link href="/css/file.css" rel="stylesheet">
 <!-- jquery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="/index-jquery.js"></script>
