--- a/views/updatepost.hbs
+++ b/views/updatepost.hbs
@@ -2,8 +2,8 @@
 
 <p>The id of the post: {{blogpost.id}}</p>
 
-{{#if blogposttest}}
-<form action="/updatepost/{{blogpost.id}}" method="POST">
+
+<form action="/blogpost/updatepost/{{blogpost.id}}" method="POST">
   <div>
     titlepost: <input type="text" name="titlepost" value="{{blogpost.title}}" >
   </div>
@@ -12,4 +12,3 @@
   </div>
   <input type="submit" value="Save Changes" >
 </form>
-{{/if}}
