--- a/views/partials/imageslist.hbs
+++ b/views/partials/imageslist.hbs
@@ -1,9 +1,16 @@
-<ul>
-  {{#each imageTable}}
-  <li>
+
+{{#each imageTable}}
+
+  <div class="column is-4">
     <div>
       <img class="image is-64x64" src="img/{{imageName}}"/>
     </div>
-  </li>
-  {{/each}}
-</ul>
+    <div>
+      <a class="delete" href="/gallery/deletegallery/{{id}}"></a>
+    </div>
+    <div>
+      <a class"button" href="/gallery/updategallery/{{id}}"> Update Image </a>
+    </div>
+  </div>
+
+{{/each}}
