--- a/views/updategallery.hbs
+++ b/views/updategallery.hbs
@@ -2,7 +2,7 @@
 
 <p>The id of the image: {{imageTable.id}}</p>
 
-<form action="/updategallery/{{imageTable.id}}" method="POST" enctype="multipart/form-data">
+<form action="/gallery/updategallery/{{imageTable.id}}" method="POST" enctype="multipart/form-data">
   <div class="file">
     <label class="file-label">
       <input class="file-input" type="file" name="photo">
