added bcrypt to hash pw

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -5,6 +5,12 @@
   About page here
 </h2>
 
+<div>
+  I love to hike outside on the mountains, preferably Mount Everest
+</div>
+<br>
+
 {{>faqs}}
+
 <!-- TODO if logged in -->
 {{>add-faq}}
