--- a/views/partials/add-faq.hbs
+++ b/views/partials/add-faq.hbs
@@ -1,7 +1,8 @@
-<h1> add a question to my FaQ </h1>
+<hr>
+<h1> Add a question to my FaQ  </h1>
 <form action="/about/faq/add-faq" method="POST">
   <div>
-    <h3>write a question here:</h3>
+    <h3>Write a question here:</h3>
      <input class="input is-small" type="text" placeholder="Question.." name="question">
   </div>
   <input type="submit" value="send">
