--- a/views/gallery.hbs
+++ b/views/gallery.hbs
@@ -10,14 +10,12 @@
   </article>
 
 
-
-  <!--TODO if ..isLoggedIn, access available  -->
-  {{#if isLoggedIn}}
+{{#if isLoggedIn}}
   <form action="/gallery" method="POST" enctype="multipart/form-data">
     <input type="hidden" value="{{token}}" name="token">
     <div class="file">
       <label class="file-label">
-        <input class="file-input" name="photo">
+        <input class="file-input" type="file" name="photo">
         <span class="file-cta">
           <span class="file-icon">
             <i class="fas fa-upload"></i>
@@ -30,5 +28,5 @@
       <input type="submit" value="Upload Image" />
     </div>
   </form>
-  {{/if}}
+{{/if}}
 </div>
