--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -43,4 +43,15 @@
       </div>
     </div>
   </div>
+  <form method="POST" action="/logut">
+    <div class="navbar-end">
+      <div class="navbar-item">
+        <div class="field is-grouped">
+          <p class="control">
+            <input type="submit" value="Logut" >
+          </p>
+        </div>
+      </div>
+    </div>
+  </form>
 </div>
