added tokens on all posts to prevent Cross site request forgery

--- a/views/faqPanel.hbs
+++ b/views/faqPanel.hbs
@@ -3,6 +3,7 @@
 <p>The id of the FaQ: {{faqs.id}}</p>
 
 <form action="/about/faq/update-answer/{{faqs.id}}" method="POST">
+	<input type="hidden" value="{{token}}" name="token">
 	<div>
 		Question: <input type="text" name="question" value="{{faqs.question}}">
 	</div>
