added if(error) on every Router

--- a/views/partials/login.hbs
+++ b/views/partials/login.hbs
@@ -1,4 +1,5 @@
 <form method="POST" action="/login">
+  <input type="hidden" value="{{token}}" name="token">
   <a class="navbar-link navbar-item" href="/">
     Admin
   </a>
