--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -14,3 +14,5 @@
 <script src="/index-jquery.js"></script>
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+<!-- Flavis -->
+<script type="text/javascript" src="/flavis/jquery.simplePagination.js"></script>
